--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ APP_SECRET=c9d5819d6cf4db4de8e052e60a9fc8d0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://steph:123@127.0.0.1:3306/pecheur?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
